--- a/src/app/todos/list-row/list-row.component.html
+++ b/src/app/todos/list-row/list-row.component.html
@@ -2,7 +2,7 @@
   <div class="col-12">
     <ng-container *ngIf="isLoading; else loadedContent">
       <div class="loadingContainer">
-        <img src="../../../assets/images/loading.svg" />
+        <img src="../../../assets/img/loading.svg" />
       </div>
     </ng-container>
 
