--- a/src/app/todos/row/row.component.css
+++ b/src/app/todos/row/row.component.css
@@ -1,17 +1,14 @@
-
-
 .listRow {
   margin-bottom: 12px;
   border-radius: 6px !important;
 }
 
-
 .listRowItem {
   display: flex;
-  gap:6px;
+  gap: 6px;
   background-color: white;
-  padding:20px;
-  border-radius:6px;
+  padding: 10px;
+  border-radius: 6px;
   align-items: start;
 }
 
@@ -73,7 +70,7 @@
   border: none;
   cursor: pointer;
   border-radius: 6px;
-  padding:8px 10px;
+  padding: 8px 10px;
   display: flex;
   align-items: center;
 }
@@ -82,6 +79,16 @@
   background: var(--secondary-color);
 }
 
-.cardButtonIcon{
-  font-size:20px
+.cardButtonIcon {
+  font-size: 20px;
+}
+
+.content__todo__list__single__text {
+  cursor: pointer;
+  padding: 12px;
+  border-radius: 6px;
+}
+
+.content__todo__list__single__text:hover {
+  background: #f9f9f9;
 }
