--- a/src/app/todos/search/search.component.scss
+++ b/src/app/todos/search/search.component.scss
@@ -1,6 +1,8 @@
 .searchContainer {
   display: flex;
   gap: 8px;
+  justify-content: start;
+  align-items: start;
 }
 
 .heightButton {
@@ -11,6 +13,41 @@
   height: 44px;
 }
 
-.inputField{
-  border:none
+.inputField {
+  border: none;
+}
+
+.searchButton {
+  border: none;
+  background: var(--primary-color);
+  border-radius: 4px;
+  width: 55px;
+  height: 46px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+.searchButton mat-icon {
+  color: #fff;
+  font-size:22px
+}
+
+.searchButton:hover {
+  border: none;
+  background: var(--secondary-color);
+  color: #fff;
+}
+
+.searchField{
+  height:48px;
+  width:100%;
+  padding:5px;
+  border:1px solid #ddd;
+  border-radius:6px;
+  margin:0 !important
+}
+
+.searchContainer{
+  width:170px
 }
