--- a/public/frontend/assets/css/calendar.component.css
+++ b/public/frontend/assets/css/calendar.component.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=calendar.component.css.map */
+.calendarContainer{width:100%;background:#fff;padding:20px;border-radius:24px}.reset-button{border:none;margin-top:4px;display:flex;align-items:center;gap:4px;padding:7px;border-radius:4px;color:#777}.reset-button:hover{background:#e1e1e1}/*# sourceMappingURL=calendar.component.css.map */
