--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <a
   href="javascript:void(0);"
   class="sidebar__close"
-  (click)="closeModel('show')"
+  (click)="closeSidebar('show')"
 >
-  <i class="uil uil-times"></i>
+  <i class="uil uil-times close-sidebar"></i>
 </a>
 <div class="sidebar__wrapper">
   <div class="sidebar__header">
