--- a/src/app/layouts/vertical/vertical.component.html
+++ b/src/app/layouts/vertical/vertical.component.html
@@ -1,5 +1,5 @@
 <main class="main-content">
-  <app-sidebar class="sidebar"></app-sidebar>
+  <app-sidebar class="sidebar sidebar-mobile"></app-sidebar>
   <div class="content">
     <app-topbar></app-topbar>
     <router-outlet></router-outlet>
