--- a/src/app/todos/row/row.component.css
+++ b/src/app/todos/row/row.component.css
@@ -1,16 +1,29 @@
-.listRow {
+.list-row {
   margin-bottom: 12px;
   border-radius: 6px !important;
 }
 
-.listRowItem {
+.list-row-item {
   display: flex;
   gap: 6px;
   background-color: white;
   padding: 10px;
+  justify-content: space-between;
   border-radius: 6px;
   align-items: start;
 }
+
+.content__todo__text_container {
+  cursor: pointer;
+  padding: 12px;
+  border-radius: 6px;
+  width: 100%;
+}
+
+.content__todo__text_container:hover {
+  background: #f9f9f9;
+}
+
 
 .categoryContainer {
   width: 100%;
@@ -43,24 +56,25 @@
   font-size: 14px;
 }
 
-.containerTodoTag {
-  margin-right: 10px;
+.cardButtonContainer{
+  display: flex;
+  gap:4px;
 }
 
 .containerTodoTagItem {
-  width: 120px !important;
+  width: 110px !important;
   border-radius: 4px;
-  font-size: 13px;
-  padding: 2px 10px;
+  font-size: 12px;
+  padding: 1px 6px;
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 4px;
   color: #fff;
   margin-bottom: 3px;
 }
 
 .containerTodoTagIcon {
-  font-size: 18px;
+  font-size: 17px;
   margin-top: 4px;
 }
 
@@ -69,8 +83,10 @@
   color: #fff;
   border: none;
   cursor: pointer;
-  border-radius: 6px;
-  padding: 8px 10px;
+  border-radius: 4px;
+  padding-top: 5px;
+  flex-grow: 1;
+  justify-content: center;
   display: flex;
   align-items: center;
 }
@@ -80,15 +96,5 @@
 }
 
 .cardButtonIcon {
-  font-size: 20px;
-}
-
-.content__todo__list__single__text {
-  cursor: pointer;
-  padding: 12px;
-  border-radius: 6px;
-}
-
-.content__todo__list__single__text:hover {
-  background: #f9f9f9;
+  font-size: 17px;
 }
